20230410 邮箱验证码发送功能以及帖子模块相关功能

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- 邮箱验证码依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
