--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       password: 123456
   redis:
     host: 192.168.136.100
+#    host: 127.0.0.1
     port: 6379
     lettuce:
       pool:
@@ -40,6 +41,9 @@ spring:
           starttls:
             enable: true
             required: true
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 mybatis-plus:
   configuration:
