--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/easy_help
+      url: jdbc:mysql://127.0.0.1:3306/easy_help
       username: root
       password: 123456
   redis:
